WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
69932
Custom fonts don't render in a region
https://bugs.webkit.org/show_bug.cgi?id=69932
Summary
Custom fonts don't render in a region
Razvan Caliman
Reported
2011-10-12 08:23:01 PDT
There is an issue when using remotely linked custom fonts (TTF / OTF) to style text content in a region. On the latest Webkit nightly the custom font text doesn't render on page load. Selecting it, where it should render, will draw it on screen. On Chromium the behavior is spotty: the text might render on page load but it will be invisible on page refresh.
Attachments
Test case
(670 bytes, text/html)
2011-10-12 08:24 PDT
,
Razvan Caliman
no flags
Details
Patch
(40.01 KB, patch)
2011-10-13 09:26 PDT
,
Dave Hyatt
mitz: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Razvan Caliman
Comment 1
2011-10-12 08:24:25 PDT
Created
attachment 110686
[details]
Test case
Dave Hyatt
Comment 2
2011-10-12 17:05:59 PDT
The problem is that regionOverflowRect() is used for repainting during a flow thread layout, but the flow thread's height is currently 0. Tricky.
Dave Hyatt
Comment 3
2011-10-12 17:07:08 PDT
Can probably just enforce a minimum size equal to the region content height.
Dave Hyatt
Comment 4
2011-10-13 00:19:31 PDT
Also need to disable layout state when fetching the repaint rectangle for regions, since the layout state pushed is the flow thread's and that's not going to be right.
Dave Hyatt
Comment 5
2011-10-13 09:26:54 PDT
Created
attachment 110859
[details]
Patch
Dave Hyatt
Comment 6
2011-10-13 09:54:18 PDT
Fixed in
r97370
.
Ryosuke Niwa
Comment 7
2011-10-13 11:44:23 PDT
There's text diff on SL:
http://build.webkit.org/results/SnowLeopard%20Intel%20Release%20(Tests)/r97370%20(33870)/fast/repaint/region-painting-via-layout-pretty-diff.html
Should we just rebaseline? Or is this actual failure?
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug